# squirrel_nav

./: .gitignore  .gitignore.orig  .travis.rosinstall  .travis.yml  README.md
alufr_behaviour/: CMakeLists.txt  package.xml
alufr_behaviour/model/: alufr_behaviour.ros_coordinator  alufr_behaviour.ros_coordinator_diagram
alufr_deployment/: .gitignore  CMakeLists.txt  package.xml
alufr_deployment/model/: alufr_deployment.ros_system  alufr_deployment.ros_system_diagram
alufr_mapping/: CMakeLists.txt  package.xml
alufr_mapping/model/: alufr_mapping.ros_package  alufr_mapping.ros_package_diagram
alufr_mapping_msgs/: CMakeLists.txt  package.xml
navigation/: package.xml
squirrel_2d_localizer/: CMakeLists.txt  LICENSE  README.md  package.xml
squirrel_2d_localizer/cfg/: MonteCarloLocalization.cfg  MotionModel.cfg  laser_model.cfg  twist_correction.cfg
squirrel_2d_localizer/cmake_modules/: FindG2O.cmake
squirrel_2d_localizer/config/: accurate_localization.yaml  default_localization.yaml  last_pose.yaml  robotino_localization.yaml
squirrel_2d_localizer/launch/: squirrel_2d_localizer.launch
squirrel_2d_localizer/rviz/: squirrel_2d_localizer.rviz
squirrel_2d_localizer/src/: convolution.cpp  distance_transform.cpp  grid_map.cpp  laser_model.cpp  laser_model_ros.cpp  latent_model_likelihood_field.cpp  latent_model_likelihood_field_ros.cpp  likelihood_field.cpp  localizer.cpp  localizer_ros.cpp  localizer_ros_node.cpp  motion_model.cpp  motion_model_ros.cpp  resampling.cpp  se2_types.cpp
squirrel_3d_localizer/: CMakeLists.txt  README.md  package.xml
squirrel_3d_localizer/config/: #robotino_localization.yaml#  last_pose.yaml  robotino_localization.yaml
squirrel_3d_localizer/launch/: localizer.launch
squirrel_3d_localizer/src/: EndpointModel.cpp  MapModel.cpp  MotionModel.cpp  ObservationModel.cpp  RaycastingModel.cpp  SquirrelLocalizer.cpp  squirrel_3d_localizer_node.cpp
squirrel_3d_mapping/: CMakeLists.txt  README.md  package.xml
squirrel_3d_mapping/cfg/: OctomapServer.cfg
squirrel_3d_mapping/launch/: 3d_mapping.launch  3d_mapping_initial.launch  octomap_server.launch
squirrel_3d_mapping/model/: squirrel_3d_mapping.ros_package  squirrel_3d_mapping.ros_package_diagram
squirrel_3d_mapping/scripts/: octomap_eraser_cli.py
squirrel_3d_mapping/src/: DynamicEDT3D.cpp  DynamicEDTOctomap.cpp  OctomapServer.cpp  OctomapServerMultilayer.cpp  OctomapServerMultilayerNode.cpp  OctomapServerNode.cpp  OctomapServerNodelet.cpp  OctomapServerStatic.cpp  PublishColorOctomap.cpp  TrackingOctomapServer.cpp  octomap_tracking_server_node.cpp
squirrel_3d_mapping/srv/: CheckCollision.srv
squirrel_dynamic_filter/: CMakeLists.txt  README.md  install_dependecies.sh  package.xml
squirrel_dynamic_filter/cmake-modules/: FindG2O.cmake
squirrel_dynamic_filter/launch/: dynamic_filter.launch  dynamic_filter_node.launch
squirrel_dynamic_filter/params/: parameters.yaml
squirrel_dynamic_filter/src/: DynamicScore.cpp  EstimateCorrespondence.cpp  EstimateFeature.cpp  EstimateMotion.cpp  StaticClassifyOctoMap.cpp  TemporalInference.cpp  dynamic_filter_node.cpp  edge.cpp  edge_unary.cpp  l_frequency.cpp  l_frequency_ground.cpp  preprocessing.cpp  publish_color_octomap.cpp  remove_dynamic.cpp  sensor_to_base_link.cpp  vertex_se3_vector3D.cpp
squirrel_footprint_observer/: CMakeLists.txt  README.md  package.xml
squirrel_footprint_observer/cfg/: footprint_observer.cfg
squirrel_footprint_observer/cmake_modules/: FindCGAL.cmake  FindYamlCpp.cmake
squirrel_footprint_observer/config/: arm_folding_observer_params.yaml  robotino_footprint.yaml  robotino_full.yaml  tuw_robotino.yaml
squirrel_footprint_observer/launch/: arm_folding_observer.launch  footprint_observer.launch
squirrel_footprint_observer/rviz/: squirrel_footprint_observer.rviz
squirrel_footprint_observer/src/: arm_folding_observer.cpp  arm_folding_observer_node.cpp  footprint_observer.cpp  footprint_observer_node.cpp
squirrel_localizer/: CMakeLists.txt  README.md  package.xml
squirrel_localizer/config/: nao_localization_laser.yaml  robotino_localization.yaml
squirrel_localizer/launch/: localizer.launch  localizer_map_server.launch  localizer_map_server_test.launch  squirrel_localizer.launch  squirrel_localizer_odom_scan.launch
squirrel_localizer/src/: BasicMotion.cpp  BasicSensor.cpp  CommandArgs.cpp  DistanceWeight.cpp  EndpointModel.cpp  FilesysTools.cpp  FloatMap.cpp  Geometry.cpp  KLDSampling.cpp  LaserSensor2D.cpp  Lexer.cpp  Localization.cpp  LocalizerApp.cpp  MapModel.cpp  MotionModel.cpp  OSSpecific.cpp  ObservationModel.cpp  PermutationSampler.cpp  PosePublisher.cpp  RawLaser.cpp  RaycastingModel.cpp  RobotLaser.cpp  RuntimeError.cpp  ScanMatcher.cpp  SimpleMotionModel.cpp  SquirrelLocalizer.cpp  Stat.cpp  StringTools.cpp  TimeUtil.cpp  squirrel_localizer_node.cpp
squirrel_nav/: CMakeLists.txt  package.xml
squirrel_navigation/: CMakeLists.txt  LICENSE  README.md  SquirrelCostampLayers.xml  SquirrelCostmapLayers.xml  SquirrelLocalPlanner.xml  SquirrelPlanners.xml  package.xml  package.xml.orig  squirrel_navigation_costmap_layers.xml  squirrel_navigation_planners.xml
squirrel_navigation/cfg/: ControllerGSFFGains.cfg  ControllerPIDGains.cfg  DownprojectionLayerPlugin.cfg  DownprojectionMultilayerPlugin.cfg  InflationLayerPlugin.cfg  LocalPlanner.cfg  LocalPlannerPlugin.cfg  MapLayerPlugin.cfg  NavigationLayer.cfg  ObstaclesLayerPlugin.cfg  PerceptionLayerPlugin.cfg  SensorLayerPlugin.cfg  TrajectoryPlanner.cfg  controller_pid.cfg  footprint_planner.cfg  global_planner.cfg  linear_motion_planner.cfg  local_planner.cfg  motion_planner.cfg
squirrel_navigation/cmake_modules/: FindOMPL.cmake
squirrel_navigation/config/: base_global_planner_params.yaml  move_base_params.yaml  (+6 more)
squirrel_pointcloud_filter/: CMakeLists.txt  LICENSE  README.md  package.xml
squirrel_pushing_planner/: .gitignore  CMakeLists.txt  package.xml
squirrel_rgbd_mapping/: CMakeLists.txt  package.xml
squirrel_rgbd_mapping_msgs/: CMakeLists.txt  package.xml
squirrel_tracker/: CMakeLists.txt  nodelet_plugins.xml  package.xml
(+440 files in other folders)
