<?xml version="1.0"?>
<package>
  <name>alufr_behaviour</name>
  <description>The alufr_behaviour package</description>
  <version>0.0.0</version>
  <maintainer email="jsf@todo.todo">jsf</maintainer>
  <author email="jsf@todo.todo">jsf</author>
  <license>TODO</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>  

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>

  	<build_depend>alufr_mapping_msgs</build_depend>
    <run_depend>alufr_mapping_msgs</run_depend>
  	<build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
  	<build_depend>sensor_msgs</build_depend>
    <run_depend>sensor_msgs</run_depend>
  

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->
  
  
</package>


