<?xml version="1.0"?>
<package>
  <name>alufr_mapping</name>
  <version>0.2.0</version>
  <description>alufr_mapping</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hess@informatik.uni-freiburg.de">Juergen Hess</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author>Juergen Hess</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>alufr_mapping_msgs</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>alufr_mapping_msgs</run_depend>
  <!-- own stuff -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
  <!--
  <depend package="tf"/>
  <depend package="pcl"/>
  <depend package="rospy"/>
  <depend package="roscpp"/>
  <depend package="rosbag"/>
  <depend package="pcl_ros"/>
  <depend package="cv_bridge"/>
  <depend package="sensor_msgs"/>
  <depend package="geometry_msgs"/>
  <depend package="visualization_msgs"/>
  <rosdep name="libqt4-opengl-dev"/>
  <rosdep name="libqt4-dev"/>
  <rosdep name="libglew-dev"/>
  <rosdep name="libdevil-dev"/>
  <rosdep name="libgsl"/>
  <rosdep name="eigen"/>
  <rosdep name="libg2o"/>
  <rosdep name="octomap"/>
  <export>
    <rosdoc config="rosdoc.yaml" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <cpp cflags="-I${prefix}/srv_gen/cpp"/>
 </export>
 -->
