<package>
    <name>alufr_mapping_msgs</name>
    <version>1.11.6</version>
    <description>alufr_mapping_msgs</description>
    <author>Juergen Hess</author>
    <author>hess@cs.uni-freiburg.de</author>
    <maintainer email="hess@cs.informatik.uni-freiburg.de">Juergen Hess</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor__msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>

