<?xml version="1.0"?>
<package format="2">
  <name>squirrel_2d_localizer</name>
  <version>1.0.0</version>
  <description>Monte Carlo Localizer for SQUIRREL project</description>

  <maintainer email="boniardi@cs.uni-freiburg.de"/>

  <license>BSD-3c</license>

  <author>Federico Boniardi</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>squirrel_2d_localizer_msgs</depend>
  <depend>tf</depend>

</package>
