<?xml version="1.0"?>
<package>
  <name>squirrel_3d_mapping</name>
  
  <version>0.5.3</version>
  
  <description>
    octomap_server loads a 3D map (as Octree-based OctoMap) and distributes it to other nodes in a compact binary format.
    It also allows to incrementally build 3D OctoMaps, and provides map saving in the node octomap_saver.
  </description>
  
  <author email="hornunga@informatik.uni-freiburg.de">Armin Hornung</author>
  <author email="boniardi@cs.uni-freiburg.de">Federico Boniardi</author>
  
  <maintainer email="hornunga@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
<!--  <build_depend>libpcl-all-dev</build_depend> -->
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>  
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>squirrel_3d_mapping_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
<!--  <run_depend>libpcl-all</run_depend> -->
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend> 
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend> 
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>squirrel_3d_mapping_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
</package>
